--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "candy",
+  "name": "candy.js",
   "version": "0.0.1",
   "description": "A new module in npm created by candy for test",
   "preferGlobal": true,
   "main": "index.js",
-  "author": "candyTong",
-  "keywords": ["candy"],
+  "author": "candytong",
+  "keywords": [
+    "candy"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/candy-Tong/candy.js.git"
+  },
+  "dependencies": {
+    "commander": "0.5.2"
+  },
   "engines": {
-    "node":"*"
+    "node": "*"
   }
 }
